# Kde-caelestia

./: .gitattributes  .gitignore  .gitmodules  CUSTOMIZATIONS.md  dump_sizes.patch  ollama_setup.sh  patch_bar.py  setup.sh  setupOLD.sh  test_lyric.cpp  uninstall.sh  update.sh
.github/: CONTRIBUTING.md  README.md  version.env
.github/ISSUE_TEMPLATE/: 2-feature_request.yml  bug_report.md
.github/scripts/: check_crlf.sh  test_hypr_shim.py  test_repo_integrity.py
.github/workflows/: check-crlf.yml  rolling-release.yml  sync-version-files.yml  validate.yml  version-release.yml
docs/: installer_config.md  kwin_port_architecture.md  lockscreen_architecture.md
installer/: CMakeLists.txt  menu.json  theme.json
installer/docs/: config.md
installer/src/: Draw.cpp  Draw.hpp  Globals.cpp  Globals.hpp  Input.cpp  Input.hpp  Runner.cpp  Runner.hpp  Term.cpp  Term.hpp  UI.cpp  UI.hpp  main.cpp
scripts/: 00-backup-themes.sh  00-banner.sh  00a-system-update.sh  01-ensure-prereqs.sh  02-packages.sh  02a-submodules.sh  03-deploy-configs.sh  04-deploy-kde.sh  06-services.sh  07-kde-apps.sh  08-build-shell.sh  09-system-tweaks.sh  10-autostart.sh  11-finalize.sh
sdata/arch-dist/: installDP.sh
sdata/fedora-dist/: installDP_fedora.sh
shell/: CMakeLists.txt  lockscreen.qml  shell.qml
shell/components/controls/: Menu.qml
shell/components/images/: CachingImage.qml  FadeImage.qml
shell/components/misc/: CustomShortcut.qml
shell/components/widgets/: CoverArt.qml
shell/modules/: IdleMonitors.qml  Shortcuts.qml
shell/modules/background/: Background.qml  DesktopContextMenu.qml  DesktopIcons.qml  DesktopLyrics.qml  Visualiser.qml  Wallpaper.qml
shell/modules/bar/: Bar.qml
shell/modules/bar/components/: Dock.qml  GithubActivity.qml  KbLayoutIndicator.qml  NotificationsIndicator.qml  ShowDesktop.qml
shell/modules/bar/components/performance/: PerfNetwork.qml  PerfStat.qml
shell/modules/bar/components/workspaces/: Workspace.qml
shell/modules/bar/popouts/: ActiveWindow.qml  DockContext.qml  DockHover.qml  TrayMenu.qml
shell/modules/bar/popouts/kblayout/: KbLayoutModel.qml
shell/modules/dashboard/: WallhavenTab.qml
shell/modules/dashboard/dash/: Media.qml  MediaShapes.qml  User.qml
shell/modules/drawers/: ContentWindow.qml
shell/modules/launcher/: AppList.qml  Content.qml
shell/modules/launcher/items/: AppItem.qml  KeybindItem.qml  WindowSwitcherItem.qml
shell/modules/launcher/services/: Clipboard.qml  Emojis.qml  Windows.qml
shell/modules/lock/: BackgroundContent.qml  Lock.qml  LockBackgroundWindow.qml  Media.qml  Resources.qml
shell/modules/nexus/: PageCompRegistry.qml  PageRegistry.qml  WindowFactory.qml
shell/modules/nexus/common/: CommitRow.qml  WallItem.qml
shell/modules/nexus/pages/: AboutPage.qml  AppsPage.qml  DesktopPage.qml  LanguageAndRegion.qml  PanelsPage.qml  PluginsPage.qml  PowerPage.qml  ServicesPage.qml  UpdatesPage.qml  UtilitiesPage.qml  WallpaperAndStyle.qml
shell/modules/nexus/pages/apps/: AppInfo.qml
shell/modules/nexus/pages/panels/: DashboardPanel.qml  TaskbarPanel.qml
shell/modules/nexus/pages/panels/taskbar/: BarComponents.qml  BarDock.qml  TaskbarElements.qml
shell/modules/nexus/pages/services/: ArpcPage.qml  GameModeTargetsPage.qml
shell/modules/nexus/pages/wallandstyle/: AddShortcutDialog.qml  AppearancePage.qml  ContextMenuPage.qml  DesktopAddonsPage.qml  SlideshowAndOrderPage.qml  VideoWallpapersPage.qml  WallpaperSettingsPage.qml
shell/modules/screenshot/: ScreenshotAction.qml
shell/modules/screenshot/regionSelector/: CursorGuide.qml  RegionSelection.qml
shell/modules/session/: Content.qml
shell/modules/shimeji/: Shimeji.qml
shell/modules/sidebar/: AiAssistant.qml  DinoGame.qml  NotifDock.qml
shell/modules/utilities/cards/: Toggles.qml
shell/plugin/: CMakeLists.txt
shell/plugin/src/Caelestia/Config/: backgroundconfig.hpp  barconfig.hpp  generalconfig.hpp  launcherconfig.hpp  shimejiconfig.hpp
shell/plugin/src/Caelestia/Services/: CMakeLists.txt  clipboardmanager.cpp  clipboardmanager.hpp  emojidb.cpp  globalshortcut.cpp  globalshortcut.hpp  hyprlandstate.cpp  hyprlandstate.hpp  keybindsmodel.cpp  kwinactivewindowbridge.cpp  kwinactivewindowbridge.hpp  kwinworkspacestate.cpp  kwinworkspacestate.hpp  lyriccandidate.hpp  lyrics.cpp  tickingservice.hpp
shell/scripts/: add_desktop_shortcut.sh
shell/services/: Colours.qml  ContextMenuStore.qml  DiscordRPC.qml  Hypr.qml  HyprlandData.qml  IdleActions.qml  Nmcli.qml  NotifData.qml  Players.qml  UpdateChecker.qml  WallhavenSearcher.qml  Wallpapers.qml  Weather.qml
shell/utils/: Strings.qml
src/keyboardshortcuts/: register.sh  workspaces.sh
src/kwin-script/contents/code/: main.js
